CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (coluster)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")

SET (CMAKE_CXX_STANDARD 20)
IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	ADD_DEFINITIONS(-fcoroutines-ts -stdlib=libc++)
	SET (STDLIB c++)
ELSEIF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	ADD_DEFINITIONS(-fcoroutines)
ENDIF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")

INCLUDE_DIRECTORIES ("${PROJECT_BINARY_DIR}")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/ref")

STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")

FILE (GLOB_RECURSE COLUSTER_SRC
	"${PROJECT_SOURCE_DIR}/ref/glm/*.hpp"
	"${PROJECT_SOURCE_DIR}/ref/glm/*.h"
	"${PROJECT_SOURCE_DIR}/ref/glm/*.cpp"
	"${PROJECT_SOURCE_DIR}/ref/optick/*.h"
	"${PROJECT_SOURCE_DIR}/ref/optick/*.hpp"
	"${PROJECT_SOURCE_DIR}/ref/optick/*.cpp"
	"${PROJECT_SOURCE_DIR}/ref/grid_dispatcher/*.h"
	"${PROJECT_SOURCE_DIR}/src/*.h"
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
)

FOREACH (FILE ${COLUSTER_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING(REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING(REPLACE "/" "\\" GROUP "${GROUP}")
	STRING(REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${COLUSTER_SRC})

ADD_EXECUTABLE (coluster ${COLUSTER_SRC})
