CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (channel)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../../src/")
SET (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

FILE (GLOB_RECURSE CHANNEL_SRC
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
	"${PROJECT_SOURCE_DIR}/src/*.h"
	"${PROJECT_SOURCE_DIR}/ref/nanomsg/nanomsg.h"
)

FOREACH (FILE ${CHANNEL_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING (REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING (REPLACE "/" "\\" GROUP "${GROUP}")
	STRING (REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP ("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${CHANNEL_SRC})

ADD_SUBDIRECTORY_WITH_FOLDER ("ref" ref/nanomsg)

ADD_LIBRARY (channel SHARED ${CHANNEL_SRC})
TARGET_LINK_LIBRARIES (channel coluster nanomsg)
TARGET_COMPILE_DEFINITIONS (channel PUBLIC CHANNEL_IMPORT)
TARGET_COMPILE_DEFINITIONS (channel PRIVATE CHANNEL_EXPORT)
