CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (pybridge)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (CMAKE_CXX_STANDARD 20)

FIND_PACKAGE (Python COMPONENTS Interpreter Development)
IF (NOT Python_FOUND)
	MESSAGE (FATAL "Python not found!")
ENDIF (NOT Python_FOUND)

INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../../src/")

FILE (GLOB_RECURSE PYBRIDGE_SRC
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
	"${PROJECT_SOURCE_DIR}/src/*.h"
)

ADD_LIBRARY (pybridge SHARED ${PYBRIDGE_SRC})
TARGET_INCLUDE_DIRECTORIES (pybridge PRIVATE "${Python_INCLUDE_DIRS}")
TARGET_LINK_LIBRARIES (pybridge ${Python_LIBRARIES} coluster)
TARGET_COMPILE_DEFINITIONS (pybridge PUBLIC PYBRIDGE_IMPORT)
TARGET_COMPILE_DEFINITIONS (pybridge PRIVATE PYBRIDGE_EXPORT)
