CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (storage)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../../src/")
SET (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

FILE (GLOB_RECURSE STORAGE_SRC
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
	"${PROJECT_SOURCE_DIR}/src/*.h"
)

FOREACH (FILE ${STORAGE_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING (REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING (REPLACE "/" "\\" GROUP "${GROUP}")
	STRING (REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP ("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${STORAGE_SRC})

ADD_LIBRARY (storage SHARED ${STORAGE_SRC})
TARGET_LINK_LIBRARIES (storage coluster)
TARGET_COMPILE_DEFINITIONS (storage PUBLIC STORAGE_IMPORT)
TARGET_COMPILE_DEFINITIONS (storage PRIVATE STORAGE_EXPORT)
