CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (trace)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../../src/")
SET (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

FILE (GLOB_RECURSE TRACE_SRC
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
	"${PROJECT_SOURCE_DIR}/src/*.h"
)

FOREACH (FILE ${TRACE_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING (REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING (REPLACE "/" "\\" GROUP "${GROUP}")
	STRING (REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP ("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${TRACE_SRC})

IF (BUILD_MONOLITHIC)
	ADD_LIBRARY (trace STATIC ${TRACE_SRC})
ELSE (BUILD_MONOLITHIC)
	ADD_LIBRARY (trace SHARED ${TRACE_SRC})
	TARGET_COMPILE_DEFINITIONS (trace PUBLIC TRACE_IMPORT)
	TARGET_COMPILE_DEFINITIONS (trace PRIVATE TRACE_EXPORT)
ENDIF (BUILD_MONOLITHIC)

TARGET_LINK_LIBRARIES (trace device ${COLUSTER_CORE_LIBNAME})
