CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (tracing)

SET (STDLIB stdc++)
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../../src/")
SET (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

FILE (GLOB_RECURSE TRACING_SRC
	"${PROJECT_SOURCE_DIR}/src/*.cpp"
	"${PROJECT_SOURCE_DIR}/src/*.h"
)

FOREACH (FILE ${TRACING_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING (REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING (REPLACE "/" "\\" GROUP "${GROUP}")
	STRING (REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP ("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${TRACING_SRC})

IF (BUILD_MONOLITHIC)
	ADD_LIBRARY (tracing STATIC ${TRACING_SRC})
ELSE (BUILD_MONOLITHIC)
	ADD_LIBRARY (tracing SHARED ${TRACING_SRC})
	TARGET_COMPILE_DEFINITIONS (tracing PUBLIC TRACING_IMPORT)
	TARGET_COMPILE_DEFINITIONS (tracing PRIVATE TRACING_EXPORT)
ENDIF (BUILD_MONOLITHIC)

TARGET_LINK_LIBRARIES (tracing ${COLUSTER_CORE_LIBNAME})
