CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (grid_demo)


SET (STDLIB stdc++)

SET (COMPILER_SUPPORT_COROUTINE ON)


OPTION (ENABLE_COROUTINE "Enable Grid Coroutine support" ${COMPILER_SUPPORT_COROUTINE})

IF (ENABLE_COROUTINE)
	SET (CMAKE_CXX_STANDARD 20)
	IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
		ADD_DEFINITIONS(-fcoroutines-ts -stdlib=libc++)
		SET (STDLIB c++)
	ELSEIF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
		ADD_DEFINITIONS(-fcoroutines)
	ENDIF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
ELSE (ENABLE_COROUTINE)
	SET (CMAKE_CXX_STANDARD 11)
ENDIF (ENABLE_COROUTINE)

INCLUDE_DIRECTORIES ("${PROJECT_BINARY_DIR}")
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")

FILE (GLOB_RECURSE GRID_DISPATCHER_DEMO_SRC
	"${PROJECT_SOURCE_DIR}/grid_common.h"
	"${PROJECT_SOURCE_DIR}/grid_dispatcher.h"
	"${PROJECT_SOURCE_DIR}/grid_dispatcher_demo.cpp"
)

ADD_EXECUTABLE (grid_dispatcher_demo ${GRID_DISPATCHER_DEMO_SRC})

IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(grid_dispatcher_demo m ${STDLIB} pthread)
ENDIF (NOT MSVC)

FILE (GLOB_RECURSE GRID_SYSTEM_DEMO_SRC
	"${PROJECT_SOURCE_DIR}/grid_common.h"
	"${PROJECT_SOURCE_DIR}/grid_system.h"
	"${PROJECT_SOURCE_DIR}/grid_system_demo.cpp"
)

ADD_EXECUTABLE (grid_system_demo ${GRID_SYSTEM_DEMO_SRC})

IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(grid_system_demo m ${STDLIB} pthread)
ENDIF (NOT MSVC)

FILE (GLOB_RECURSE GRID_TREE_DEMO_SRC
	"${PROJECT_SOURCE_DIR}/grid_common.h"
	"${PROJECT_SOURCE_DIR}/grid_tree.h"
	"${PROJECT_SOURCE_DIR}/grid_tree_demo.cpp"
)

ADD_EXECUTABLE (grid_tree_demo ${GRID_TREE_DEMO_SRC})

IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(grid_tree_demo m ${STDLIB} pthread)
ENDIF (NOT MSVC)

FILE (GLOB_RECURSE GRID_BUFFER_DEMO_SRC
	"${PROJECT_SOURCE_DIR}/grid_common.h"
	"${PROJECT_SOURCE_DIR}/grid_buffer.h"
	"${PROJECT_SOURCE_DIR}/grid_buffer_demo.cpp"
)

ADD_EXECUTABLE (grid_buffer_demo ${GRID_BUFFER_DEMO_SRC})

IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(grid_buffer_demo m ${STDLIB} pthread)
ENDIF (NOT MSVC)

IF (ENABLE_COROUTINE)
	FILE (GLOB_RECURSE GRID_COROUTINE_DEMO_SRC
		"${PROJECT_SOURCE_DIR}/grid_common.h"
		"${PROJECT_SOURCE_DIR}/grid_dispatcher.h"
		"${PROJECT_SOURCE_DIR}/grid_coroutine.h"
		"${PROJECT_SOURCE_DIR}/grid_coroutine_demo.cpp"
	)
	
	ADD_EXECUTABLE (grid_coroutine_demo ${GRID_COROUTINE_DEMO_SRC})

	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES(grid_coroutine_demo m ${STDLIB} pthread)
	ENDIF (NOT MSVC)
ENDIF (ENABLE_COROUTINE)
